fixing blurry background for ios

--- a/style/style.css
+++ b/style/style.css
@@ -188,10 +188,12 @@ h1{
 }
 
 @media only screen and (max-width: 600px) {
+ 
     body{
         background-image: url(../images/natureBackground/natureBackground2.jpg) no-repeat center;
         padding-top: 25vw; 
-       
+        background-attachment: fixed;
+        background-size: cover;
     }
 
     h1{
